bug fix: sold out product

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -9115,6 +9115,6 @@ body .mfp-wrap {
   top: 0 !important;
 }
 
-select.single-option-selector option[disabled] {
+select.single-option-selector option[sold-out='true'] {
   color: rgba(204, 204, 204, 0.85);
 }
