bug fix: Header

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -3174,6 +3174,11 @@ ul.main-menu #menu-account-link {
     fill: $colorNavText;
   }
 
+  .header-hamburger svg{
+    display: flex;
+    width: 100%;
+  }
+
   .header-hamburger,
   .header-cart__wrapper{
     z-index: 1000;
