--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -3240,6 +3240,11 @@ ul.main-menu #menu-account-link {
     fill: $colorNavText;
   }
 
+  .header-hamburger svg{
+    display: flex;
+    width: 100%;
+  }
+
   .header-hamburger,
   .header-cart__wrapper{
     z-index: 1000;
