--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -6155,9 +6155,10 @@ label.quatity-selector{
   @extend .h6--accent;
   a,
   span {
-    display: inline-block;
+    display: inline;
     padding: ($gutter / 2) 7px ($gutter / 2) 0;
     margin-right: 7px;
+    line-height: 20px;
     text-decoration: none;
     &:first-child {
       padding-left: 0;
@@ -8618,9 +8619,9 @@ $adjusted-full: $adjusted-width + px;
   text-align:left;
 }
 /* -- breadcrumb -- */
-nav.breadcrumb {
-  white-space:nowrap;
-}
+//nav.breadcrumb {
+//  white-space:nowrap;
+//}
 nav.breadcrumb span {
   text-overflow: ellipsis;
 }
