bug fix: header

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -3111,6 +3111,10 @@ ul.main-menu #menu-account-link {
     display:none;
   }
 
+  #desktop-header-wishlist-wrapper {
+    display: flex;
+  }
+
   .nav--mobile{
     display: none;
   }
