--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -3170,6 +3170,10 @@ ul.main-menu #menu-account-link {
     display:none;
   }
 
+  #desktop-header-wishlist-wrapper {
+    display: flex;
+  }
+
   .nav--mobile{
     display: none;
   }
