--- a/assets/search.svg.liquid
+++ b/assets/search.svg.liquid
@@ -1,3 +1,4 @@
-<svg xmlns="http://www.w3.org/2000/svg" width="12.846" height="12.846" viewBox="0 0 12.846 12.846">
-	<path id="noun-search-3184147" d="M163.392,162.73l-3.375-3.375a5.246,5.246,0,1,0-.744.744l3.375,3.375a.527.527,0,0,0,.744-.744ZM152.951,159a4.192,4.192,0,1,1,1.889,1.1,4.218,4.218,0,0,1-1.889-1.1Z" transform="translate(-150.673 -150.755)" fill="#2b2b2b"/>
+
+<svg width="20" height="16" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+	<path fill-rule="evenodd" clip-rule="evenodd" d="M11.0037 10.3056L15.69 14.9913C16.0556 15.3575 16.0556 15.9513 15.69 16.3175C15.3237 16.6831 14.73 16.6831 14.3637 16.3175L9.58312 11.5363C8.61812 12.1463 7.475 12.5 6.25 12.5C2.8 12.5 0 9.69938 0 6.25C0 2.8 2.8 0 6.25 0C9.69938 0 12.5 2.8 12.5 6.25C12.5 7.79688 11.9362 9.21312 11.0037 10.3056Z" fill="#2b2b2b"/>
 </svg>
