Revert "Merge pull request #65 from sergei-porfenovich/navigation-redesign"
This reverts commit 4af31e7f0eaf0e676238e441c21bf7b7aee36ffd, reversing
changes made to d4d38caa8b0bdf91ad4867e9fe12a06e4b6be1c4.

--- a/assets/eterne_wish_list.svg.liquid
+++ b/assets/eterne_wish_list.svg.liquid
@@ -1,8 +1,3 @@
-<svg width="20" height="16" viewBox="0 0 17 13" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
-    <g id="Artboard1" transform="matrix(1,0,0,0.866667,0,0)">
-        <rect x="0" y="0" width="16" height="15" style="fill:none;"/>
-        <g transform="matrix(0.167276,0,0,0.193011,-0.36315,-2.15063)">
-            <path d="M50.056,88.113C50.018,88.114 49.981,88.114 49.943,88.113C49.511,88.113 49.074,87.984 48.694,87.714C47.495,86.863 19.192,66.676 8.764,49.647C8.75,49.624 8.737,49.601 8.723,49.578C6.396,45.718 5.166,41.286 5.166,36.755C5.166,23.043 16.322,11.887 30.034,11.887C37.973,11.887 45.345,15.659 49.999,21.924C54.653,15.659 62.026,11.887 69.964,11.887C83.676,11.887 94.832,23.043 94.832,36.755C94.832,41.286 93.602,45.718 91.275,49.578C91.262,49.601 91.249,49.624 91.234,49.647C80.807,66.676 52.504,86.863 51.304,87.714C50.926,87.984 50.489,88.113 50.056,88.113Z" style="fill:rgb(43,43,43);fill-rule:nonzero;"/>
-        </g>
-    </g>
+<svg xmlns="http://www.w3.org/2000/svg" width="14.435" height="12.231" viewBox="0 0 14.435 12.231">
+    <path id="noun-heart-827145" d="M308.96,343.176a3.522,3.522,0,0,0-2.523,1.063,3.665,3.665,0,0,0,0,5.123l5.575,5.69h0a.353.353,0,0,0,.5,0q2.79-2.841,5.58-5.685a3.664,3.664,0,0,0,0-5.123,3.532,3.532,0,0,0-5.051,0l-.777.793-.777-.8a3.535,3.535,0,0,0-2.528-1.063Zm0,.694a2.828,2.828,0,0,1,2.022.865l1.036,1.052h0a.352.352,0,0,0,.5,0l1.03-1.047a2.8,2.8,0,0,1,4.043,0,2.953,2.953,0,0,1,0,4.137l-5.327,5.426-5.327-5.431a2.954,2.954,0,0,1,0-4.137,2.828,2.828,0,0,1,2.022-.865Z" transform="translate(-305.048 -343.051)" fill="#2b2b2b" stroke="#2b2b2b" stroke-width="0.25"/>
 </svg>
