--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -9436,3 +9436,9 @@ body .mfp-wrap {
 select.single-option-selector option[disabled] {
   color: rgba(204, 204, 204, 0.85);
 }
+
+@media (max-width: 300px) {
+  .mobile-wrapper .logo-wrapper img {
+    max-height: 34px;
+  }
+}
