bug fix: Add to whishlist

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -6405,6 +6405,12 @@ li.cbb-frequently-bought-product:first-of-type div.cbb-frequently-bought-product
   }
 }
 
+@media screen and (max-width: 340px) {
+  #smartwishlist div#bookmarkit {
+    background-position: 19% 48% !important;
+  }
+}
+
 div.wishlistpage .btn, .modal .btn {
   font-family: miller-display,"PT Serif",serif !important;
   font-size: 14.4px;
