Standard case add to wishlist

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -6373,13 +6373,13 @@ li.cbb-frequently-bought-product:first-of-type div.cbb-frequently-bought-product
 }
 
 #smartwishlist div#bookmarkit.unbookmarked .fa-heart-o::before{
-  content: "\a0 \a0  \a0 \a0 \a0 ADD TO WISHLIST";
+  content: "\a0 \a0  \a0 \a0 \a0 Add To Wishlist";
   font-family: miller-display, "PT Serif", serif;
   font-size: 14.4px;
 }
 
 /* #smartwishlist div#bookmarkit.bookmarked .fa-heart::before{
-  content: "\f004 DROP FROM WISHLIST";
+  content: "\f004 Drop From Wishlist";
   font-family: miller-display, "PT Serif", serif;
   font-size: 14.4px;
 } */
