--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -6373,7 +6373,7 @@ li.cbb-frequently-bought-product:first-of-type div.cbb-frequently-bought-product
 }
 
 #smartwishlist div#bookmarkit.unbookmarked .fa-heart-o::before{
-  content: "\a0 \a0  \a0 \a0 \a0 Add To Wishlist";
+  content: "\a0 \a0 \a0 \a0 Add To Wishlist";
   font-family: miller-display, "PT Serif", serif;
   font-size: 14.4px;
 }
