--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -6357,7 +6357,7 @@ li.cbb-frequently-bought-product:first-of-type div.cbb-frequently-bought-product
   background: #fff url("../assets/noun-heart-831660.svg") !important;
   background-repeat: no-repeat !important;
   background-size: 18px 18px !important;
-  background-position: 17px 12px !important;
+  background-position: 35px 12px !important;
   display: block;
   border: 1px #000 solid;
   width: 200px !important;
@@ -6373,7 +6373,7 @@ li.cbb-frequently-bought-product:first-of-type div.cbb-frequently-bought-product
 }
 
 #smartwishlist div#bookmarkit.unbookmarked .fa-heart-o::before{
-  content: "\a0 \a0 \a0 \a0 \a0 \a0 Add To Wishlist";
+  content: "\a0 \a0 \a0 \a0 \a0 \a0 \a0 \a0 Add To Wishlist";
   font-family: miller-display, "PT Serif", serif;
   font-size: 14.4px;
 }
