--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -117,6 +117,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   <script>window.beans_cjs_id = '{{ customer.id }}'; window.beans_cjs_email = '{{ customer.email }}';</script>{% include "ot-cookies" %}
   {% render 'qikify-apps' %}
+
+  {% if settings.ss_enable %}
+  	{% render 'ss-script' %}
+  {% endif %}
 </head>
 
 <body id="{{ page_title | handle }}" class="{% if customer %}customer-logged-in {% endif %}template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}" data-animations="{{ settings.animations_enable }}">
@@ -218,5 +222,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
  {% include 'smile-initializer' %}
 
-{% include 'subscribe-it-helper' %}</body>
+ {% include 'subscribe-it-helper' %}
+
+ {% if settings.ss_enable %}
+	{% render 'ss-intellisuggest' %}
+ {% endif %}
+</body>
 </html>
