--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -74,11 +74,18 @@
 
   {% if section.settings.header_enable_search %}
     <div class="info-bar-search">
-      <form action="/search" method="get" class="input-group search" role="search">
-        {% if section.settings.search_only_products %}<input type="hidden" name="type" value="product">{% endif %}
-        <button type="submit" class="btn search-btn">SEARCH</button>
-        <input class="search-bar" type="search" name="q" placeholder="search term">
-      </form>
+	  {% if settings.ss_enable %}
+		  <form action="{{ collections[settings.ss_collection_handle].url }}" method="get" class="input-group search" role="search">
+			<button type="submit" class="btn search-btn">SEARCH</button>
+			<input class="search-bar ss__autocomplete__input" type="search" name="q" placeholder="search term">
+		  </form>
+	  {% else %}
+		  <form action="/search" method="get" class="input-group search" role="search">
+			{% if section.settings.search_only_products %}<input type="hidden" name="type" value="product">{% endif %}
+			<button type="submit" class="btn search-btn">SEARCH</button>
+			<input class="search-bar" type="search" name="q" placeholder="search term">
+		  </form>
+	  {% endif %}
     </div>
   {% endif %}
 
