Add SS recommendations to 404 page

--- a/templates/404.liquid
+++ b/templates/404.liquid
@@ -6,4 +6,6 @@
       <p class="text-center">{{ 'general.404.subtext_html' | t }}</p>
     </div>
   </div>
+
+  <script type="searchspring/personalized-recommendations" profile="404"></script>
 </div>
