--- a/snippets/product.liquid
+++ b/snippets/product.liquid
@@ -193,6 +193,16 @@
       </div>
     {%- endif -%}
   </div>
+
+  <div class="wrapper">
+    {% comment %}
+      <script type="searchspring/personalized-recommendations" profile="similar">
+          seed = "{{ product.variants[0].sku }}";
+      </script>
+    {% endcomment %}
+
+    <script type="searchspring/personalized-recommendations" profile="recently-viewed"></script>
+  </div>
 </div>
 
 {% if description_position == 'both' %}
