Add SS recommendations to cart page

--- a/sections/cart.liquid
+++ b/sections/cart.liquid
@@ -54,7 +54,9 @@
 	{% endif %}
 </div>
 
-
+<div class="wrapper page-margin text-center">
+  <script type="searchspring/personalized-recommendations" profile="view-cart"></script>
+</div>
 
 {% schema %}
 {
