--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -1773,6 +1773,12 @@ input.btn--secondary {
 
 }
 
+.cart__footer input.continue__button {
+  @include at-query ($max, $small) {
+    width: 100%;
+  }
+}
+
 
 /*================ Force an input/button to look like a text link ================*/
 input.text-link,
@@ -9482,5 +9488,5 @@ select.single-option-selector option[disabled] {
 }
 
 #your-shopping-cart #gsAppContainer {
-  display: none; !important;
+  display: none !important;
 }
