--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -15,6 +15,7 @@
 
 /*================ TOOLS ================*/
 /*================ Mixins ================*/
+
 @mixin clearfix() {
   &::after {
     content: '';
@@ -9490,3 +9491,21 @@ select.single-option-selector option[disabled] {
 #your-shopping-cart #gsAppContainer {
   display: none !important;
 }
+
+.grid-rows-one, .grid-rows-two, .grid-rows-three, .grid-rows-four, .grid-rows-five, .grid-rows-six   {
+  align-items: unset !important;
+  div>div {
+    height: calc(100% - 116px);
+    overflow: hidden;
+  }
+
+  .lazy-image {
+    height: 100%;
+
+  }
+  .lazy-image img {
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
