fix image different height on all collections

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -9492,17 +9492,17 @@ select.single-option-selector option[disabled] {
   display: none !important;
 }
 
-.grid-rows-one, .grid-rows-two, .grid-rows-three, .grid-rows-four, .grid-rows-five, .grid-rows-six   {
+.grid-image-fix {
   align-items: unset !important;
-  div>div {
+  .fix-image-wrapper {
     height: calc(100% - 116px);
     overflow: hidden;
   }
 
   .lazy-image {
     height: 100%;
-
   }
+
   .lazy-image img {
     height: 100%;
     object-fit: cover;
