--- a/sections/custom-collection-thermals.liquid
+++ b/sections/custom-collection-thermals.liquid
@@ -141,7 +141,7 @@
       </div>
 	  <div class="grid">
         <div class="grid__item collection-content one-whole">
-          <div class="grid-uniform">
+          <div class="grid-uniform grid-image-fix">
               {% for block in section.blocks %}
             	{%- assign handle = "" -%}
             	<div class="grid grid--full aos-init aos-animate" data-aos="fade-up" style="margin-top:{{section.settings.shop_margin_top}}px;margin-bottom:{{section.settings.shop_margin_bottom}}px;">
