--- a/sections/dresses-collection.liquid
+++ b/sections/dresses-collection.liquid
@@ -4,17 +4,21 @@
 
 {%- assign grid_offset = '' -%}
 {%- assign products_count = collection.products_count -%}
+{% assign grid_setting_height_class = '' %}
 
 {%- case section.settings.grid_setting_large -%}
   {%- when 1 -%}
     {%- assign grid_width_large = 'large--one-whole' -%}
+    {% assign grid_setting_height_class = 'grid-rows-one' %}
   {%- when 2 -%}
     {%- assign grid_width_large = 'large--one-half' -%}
+    {% assign grid_setting_height_class = 'grid-rows-two' %}
     {%- if products_count == 1 -%}
       {%- assign grid_offset = 'push--large--one-quarter' -%}
     {%- endif -%}
   {%- when 3 -%}
     {%- assign grid_width_large = 'large--one-third' -%}
+    {% assign grid_setting_height_class = 'grid-rows-one' %}
     {%- if products_count == 1 -%}
       {%- assign grid_offset = 'push--large--one-third' -%}
     {%- elsif products_count == 2 -%}
@@ -22,6 +26,7 @@
     {%- endif -%}
   {%- when 4 -%}
     {%- assign grid_width_large = 'large--one-quarter' -%}
+    {% assign grid_setting_height_class = 'grid-rows-one' %}
     {%- if products_count == 1 -%}
       {%- assign grid_offset = 'push--large--three-eighths' -%}
     {%- elsif products_count == 2 -%}
@@ -31,6 +36,7 @@
     {%- endif -%}
   {%- when 5 -%}
     {%- assign grid_width_large = 'large--one-fifth' -%}
+    {% assign grid_setting_height_class = 'grid-rows-one' %}
     {%- if products_count == 1 -%}
       {%- assign grid_offset = 'push--large--two-fifths' -%}
     {%- elsif products_count == 2 -%}
@@ -42,6 +48,7 @@
     {%- endif -%}
   {%- when 6 -%}
     {%- assign grid_width_large = 'large--one-sixth' -%}
+    {% assign grid_setting_height_class = 'grid-rows-one' %}
     {%- if products_count == 1 -%}
       {%- assign grid_offset = 'push--large--five-twelfths' -%}
     {%- elsif products_count == 2 -%}
@@ -140,7 +147,7 @@
       </div>
 	  <div class="grid">
         <div class="grid__item collection-content one-whole">
-          <div class="grid-uniform">
+          <div class="grid-uniform grid-image-fix">
               {% for block in section.blocks %}
             	{%- assign handle = "" -%}
             	<div class="custom-shop-grid grid grid--full aos-init aos-animate" data-aos="fade-up" style="margin-top:{{section.settings.shop_margin_top}}px;">
