--- a/sections/gift-card-collection.liquid
+++ b/sections/gift-card-collection.liquid
@@ -140,7 +140,7 @@
       </div>
 	  <div class="grid">
         <div class="grid__item collection-content one-whole">
-          <div class="grid-uniform">
+          <div class="grid-uniform grid-image-fix">
               {% for block in section.blocks %}
             	{%- assign handle = "" -%}
             	<div class="custom-shop-grid grid grid--full aos-init aos-animate" data-aos="fade-up" style="margin-top:{{section.settings.shop_margin_top}}px;">
