fix image height

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -9509,3 +9509,8 @@ select.single-option-selector option[disabled] {
   }
 }
 
+{% comment %}.custom-shop-grid .grid__item .grid__item_frame {
+  height: 100% !important;
+}
+
+{% endcomment %}
