--- a/snippets/product-shop-grid-item-2.liquid
+++ b/snippets/product-shop-grid-item-2.liquid
@@ -77,23 +77,27 @@
 
 <div class="grid__item {{handle}} {{ grid_offset }} {{ grid_width_small }} {{ grid_width_medium }} {{ grid_width_large }}{% if on_sale %} on-sale{% endif %}{% if tagged %} tagged{% endif %} product-grid-item">
   
-  <div class="grid__item_frame" data-aspectratio="{{inverse_ratio}}">
+  {% comment %}<div class="grid__item_frame" data-aspectratio="{{inverse_ratio}}">
+
+  </div>{% endcomment %}
+
+  <div class="fix-image-wrapper" {% if reduce_img %}style="max-width: 90%; width: 100%; margin: 0 auto" {% endif %}>
     <a href="{{ product.url }}" class="{{ product.handle }} lazy-image{% if double_img %} double__image{% endif %}" style="padding-top:{{ 1 | divided_by: feature_image.aspect_ratio | times: 100}}%; background-image:  url('{{ feature_image | img_url: '1x1' }}');">
       <img class="lazyload lazypreload fade-in shop-grid-img"
-        alt="{{ product.title  }}"
-        src="{{ product_img }}"
-        data-original="{{ product_img }}"
-        data-src="{{ product_img }}"
-        data-widths="[180, 360, 540, 720, 900, 1080, 1296, 1512, 1728, 2048, 2450, 2700, 3000, 3350, 3750, 4100, 4480]"
-        data-aspectratio="{{  feature_image.aspect_ratio }}"
-        data-sizes="auto" />
+           alt="{{ product.title  }}"
+           src="{{ product_img }}"
+           data-original="{{ product_img }}"
+           data-src="{{ product_img }}"
+           data-widths="[180, 360, 540, 720, 900, 1080, 1296, 1512, 1728, 2048, 2450, 2700, 3000, 3350, 3750, 4100, 4480]"
+           data-aspectratio="{{  feature_image.aspect_ratio }}"
+           data-sizes="auto" />
       {% if double_img %}
         <div class="collection__image__bottom lazyload" data-bgset="{% include 'bgset', image: product.images[1] %}"></div>
       {% endif %}
       {{ sticker }}
     </a>
   </div>
-  
+
   <noscript>
     <a href="{{ product.url }}">
       <img src="{{ feature_image | img_url: '360x' }}" alt="{{ product.title  }}">
