--- a/sections/custom-collection.liquid
+++ b/sections/custom-collection.liquid
@@ -143,7 +143,7 @@
               {% for block in section.blocks %}
             	{%- assign handle = "" -%}
             	<div class="custom-shop-grid grid grid--full aos-init aos-animate" data-aos="fade-up" style="margin-top:{{section.settings.shop_margin_top}}px;">
-                  <div style="margin:{{block.settings.shop_product_margin}}px;padding:{{block.settings.shop_product_padding}}px;">
+                  <div style="margin:{{block.settings.shop_product_margin}}px;padding:{{block.settings.shop_product_padding}}px;display: flex; width: 100%;">
                   {%- case block.type -%}
 
                     {%- when "shop_imgproducts1" -%}
