--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -9508,3 +9508,7 @@ select.single-option-selector option[disabled] {
     object-fit: cover;
   }
 }
+
+.cbb-product-page main {
+  padding-bottom: 0;
+}
