--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -9490,6 +9490,7 @@ select.single-option-selector option[disabled] {
 #your-shopping-cart #gsAppContainer {
   display: none !important;
 }
+//add styles for footer
 
 .cbb-product-page main {
   padding-bottom: 0;
