fix row with a single image

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -9507,4 +9507,20 @@ select.single-option-selector option[disabled] {
     height: 100%;
     object-fit: cover;
   }
+
+  {% comment %}.single_row_portrait {
+    width: 100%;
+  }{% endcomment %}
+}
+{% comment %}
+.single_row_portrait {
+  width: 50%;
+}{% endcomment %}
+
+.single_row_portrait {
+   width: 50%;
+ }
+
+.single_row_landscape {
+  width: 100%;
 }
