--- a/sections/tshirt-collection-2.liquid
+++ b/sections/tshirt-collection-2.liquid
@@ -57,7 +57,7 @@
 
 {%- case section.settings.grid_setting_medium -%}
   {%- when 1 -%}
-    {%- assign grid_width_medium = 'medium--one-whole' -%}
+    {%- assign medium--one-whole = 'medium--one-whole' -%}
   {%- when 2 -%}
     {%- assign grid_width_medium = 'medium--one-half' -%}
   {%- when 3 -%}
